--- a/Base de Testes.ipynb
+++ b/Base de Testes.ipynb
@@ -306,7 +306,7 @@
     "#df_final=pd.DataFrame()\n",
     "\n",
     "#fig, axes = plt.subplots(figsize=(9,6))\n",
-    "files = glob.glob(\"/home/joao/Documentos/21032023_repetições/pontos/*.csv\")\n",
+    "files = glob.glob(\".../21032023_repetições/pontos/*.csv\")\n",
     "\n",
     "df_final = pd.DataFrame()\n",
     "for f in files:\n",
@@ -1967,6 +1967,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "558e0453-bd71-43a1-b7d9-c1957772a298",
    "metadata": {},
@@ -2967,6 +2968,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f6bd73e4-c14c-4454-a939-abe9a98a2c51",
    "metadata": {},
@@ -3774,6 +3776,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "46aebb94-d01b-42ea-8f73-5c3b7518dcae",
    "metadata": {
@@ -4726,6 +4729,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "265c19de-bcc8-44e8-9445-a10860f45829",
    "metadata": {
@@ -5730,6 +5734,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "37efc27f-8fea-42ba-a009-b46ca856781c",
    "metadata": {
@@ -6734,6 +6739,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bccd8e9f-6d1c-42ff-bd13-db3fa57393e4",
    "metadata": {
@@ -7738,6 +7744,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d0254a94-d77a-4c85-aa73-a152d8576b3a",
    "metadata": {
@@ -7907,6 +7914,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a7e68732-5b63-42fc-ba92-3df112aa1435",
    "metadata": {
@@ -8660,6 +8668,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1edda668-5917-4865-9451-243c09a393a0",
    "metadata": {
@@ -9663,6 +9672,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eb41f0cc-f4b5-43b8-a336-ba32374a5ea1",
    "metadata": {
@@ -10566,6 +10576,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "38e58f63-e78b-4263-91bf-b8a6ca90264c",
    "metadata": {
@@ -11569,6 +11580,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3c5293b5-9808-4987-802e-9fbc60a55cab",
    "metadata": {},
@@ -12879,6 +12891,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d90722e1-e3f7-4ec7-b8e5-6bd4c25dde60",
    "metadata": {},
@@ -13880,6 +13893,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c123e102-e376-42d0-b6c5-ce6d04d42429",
    "metadata": {},
@@ -15183,6 +15197,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c09446b9-2add-4213-8ad1-fe388cfdb797",
    "metadata": {},
